<resources>
    <string name="app_name">BookShare</string>
    <string name="feed_card_read_more">Read More</string>
    <string name="feed_card_show_less">Show Less</string>
    <string name="feed_card_view_description">View description</string>
    <string name="description_dialog_close">Close</string>
    <string name="description_dialog_empty">No description available.</string>
    <string name="feed_title">Community Reviews</string>
    <string name="feed_profile_description">Open profile</string>
    <string name="feed_logout_description">Log out</string>
    <string name="feed_create_book_description">Add a new book</string>
    <string name="feed_search_hint">Search by book title…</string>

    <string name="addedit_add_title">Add Book</string>
    <string name="addedit_edit_title">Edit Book</string>
    <string name="addedit_back_description">Back</string>
    <string name="addedit_search_hint">Search Google Books</string>
    <string name="addedit_search_subhint">Type at least 4 letters to see matches</string>
    <string name="addedit_search_icon_description">Search</string>
    <string name="addedit_cover_description">Book cover</string>
    <string name="addedit_title_hint">Title</string>
    <string name="addedit_author_hint">Author</string>
    <string name="addedit_description_hint">Description</string>
    <string name="addedit_rating_label">Your Rating</string>
    <string name="addedit_review_hint">Your Review</string>
    <string name="addedit_save">Save</string>
    <string name="addedit_delete">Delete</string>
    <string name="addedit_save_progress_description">Saving…</string>
    <string name="addedit_required_field">Title and author are required.</string>
    <string name="addedit_save_failed">Couldn\'t save: %s</string>
    <string name="addedit_delete_failed">Couldn\'t delete: %s</string>
    <string name="addedit_search_no_results">No books found for that query.</string>
    <string name="addedit_search_failed">Search failed: %s</string>
    <string name="addedit_cover_source_title">Book cover photo</string>

    <string name="profile_edit_title">Edit Profile</string>
    <string name="profile_edit_name_hint">Display name</string>
    <string name="profile_edit_change_photo">Change Photo</string>
    <string name="profile_edit_save">Save</string>
    <string name="profile_edit_cancel">Cancel</string>
    <string name="profile_edit_name_required">Please enter a display name.</string>
    <string name="profile_edit_success">Profile updated.</string>
    <string name="profile_edit_failed">Couldn\'t update profile: %s</string>
</resources>